<resources>
    <string name="app_name">myLight</string>
    <string name="red">red</string>
    <string name="blue">blue</string>
    <string name="green">green</string>
    <string name="preview">preview</string>
    <string name="addRed">more red</string>
    <string name="remRed">less red</string>
    <string name="addBlue">more blue</string>
    <string name="remBlue">less blue</string>
    <string name="addGreen">more green</string>
    <string name="remGreen">less green</string>
    <string name="title_activity_accueil">accueil</string>
    <string name="welcome">Welcome !</string>
    <string name="author">My Lamp\n By Alain Sandoz</string>
    <string name="RGB">Standard</string>
    <string name="HSV">Wheel</string>
    <string name="saved">Favourites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>